<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">Spinning Logo Live Wallpaper</string>
    <string name="service_label">Spinning Logo LWP</string>
    <string name="description">A wallpaper consisting of a spinning logo rotating in the center of the screen</string>
    <string name="invalid_license">The Spinning Logo Live Wallpaper has been installed on this device without a license!</string>
    <string name="license_check_error">Error while performing application license check, error code: </string>
    
    <!--  settings screen -->
    <string name="spinlogo_settings">Preferences</string>
    <string name="rotation_speed_name">RotationSpeed</string>
    <string name="rotation_speed_summary">%1$.1f deg/sec</string>
    <string name="rotation_speed_default_value">25</string>
    <string name="rotation_speed_max_value">90</string>
    <string name="rotation_speed_title">Rotation speed</string>
    <color name="white_color">#fff</color>
    <color name="gray_color">#aaa</color>
    
    <!-- License status dialog -->
    <string name="license_check_title">License Status</string>
    <string name="license_check_summary">TODO</string>
    <string name="license_check_status_label">License Status:</string>
    <string name="license_check_android_market_label">Go to the Android Market page of the application</string>
    <string name="license_check_dialog_title">Check your license status</string>
    <string name="license_check_email_dev_label">Contact the developer</string>
    <string name="license_check_email_subject">Problems with license for app </string>
    <string name="license_check_email_dev_intent">Email the developer</string>
    <string name="license_check_negative_button">Cancel</string>
    <string name="license_check_positive_button_ok">OK</string>
    <string name="license_check_positive_button_check_license">Check license</string>
    <color name="color_license_invalid">#f00</color>
    <color name="color_license_error">#00f</color>
    <color name="color_license_ok">#0f0</color>
    <color name="color_license_unknown">#ff0</color>
    
    <string name="license_check_notes_label">The Spinning Logo Live Wallpaper version
    	installed on this device did not pass license validation! Please 
    	get a valid version of the application from the Android Market.
    	
    	You may reattempt license validation right now by clicking the \'Check license\' 
    	button below, or later from the Preferences page.
    	The license validation process needs access to the Android Market servers, so
    	please make sure you have network coverage during the validation process.
    	</string>
    <string name="license_check_notif_ticker_text">Spinning Logo Live Wallpaper license validation failed!</string>
    <string name="license_check_notif_title">License validation failed...</string>
    <string name="license_check_notif_text">Click here to reattempt license validation</string>
    <string name="license_check_in_progress">Check in progress...</string>
    
    <color name="black_color">#000</color>
    
    <!-- crash reporting -->
    <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
	<string name="crash_notif_title">Spinning Logo LWP has crashed...</string>
	<string name="crash_notif_text">Please click here to help fix the issue.</string>
	<string name="crash_dialog_title">Spinning Logo Live Wallpaper has crashed</string>
	<string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click \'OK\'.</string>
	<string name="crash_dialog_comment_prompt">However you can help by providing additional details
		on the conditions onto which the error occured: 
		how were you using the phone in general, and the live wallpaper in particular; 
		what applications were opened;
		eventually, an email address where we can contact you wrt this issue</string>
	<string name="crash_dialog_ok_toast">Thank you! We\'ll take care of this issue ASAP!</string>
	
	<!-- crash reporting preference checkbox -->
	<string name="pref_disable_acra">Disable crash reporting</string>
	<string name="pref_acra_disabled">Crash reporting mechanism disabled.</string>
	<string name="pref_acra_enabled">Crash reporting mechanism enabled, you will be able to contact dev via form submission</string>
	
	<!-- issue reporting -->
	<string name="user_feedback_title">User feedback</string>
	<string name="user_feedback_dialog_title">User feedback form</string>
	<string name="user_feedback_summary">Contact the developer for issues, technical questions and/or suggestions</string>
	<string name="user_feedback_description">You can help us improve!</string>
	<string name="user_feedback_details">
		Your opinion matters to us! Feel free to send any issue, technical support question 
		or any other suggestion you might have to the developer.
		Also, feel free to include your email address so we can get back to you.
	</string>
	<string name="user_feedback_logcat_checkbox">Add device logs to report</string>
	<string name="user_feedback_report_sent">Thank you for your feedback!</string>
	
	<!-- full version -->
	<string name="full_version_logo_texture_title">Ying Yang Image</string>
	<string name="full_version_skybox_texture_title">Background Image</string>
	<string name="full_version_summary">Default</string>
	<string name="full_version_dialog_title">Download full version</string>
	<string name="full_version_positive_btn">Get full version</string>
	<string name="full_version_negative_btn">No, thanks</string>
	<string name="full_version_teaser">This feature is only available in full version!</string>
	<string name="full_version_features">Key benefits of full version:\n* 100% Ad Free\n* No permissions required\n* Fully skinnable</string>
	<string name="full_version_donate">Your donation is what motivates us for developing these nice-looking wallpapers.\nIf you like it, please download the full version! You won\'t regret it!</string>
	
</resources>
