<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/spinlogo_settings"
	android:key="settings">

    <com.killerappz.android.spinlogo.preferences.SeekBarPreference
        android:key="rotation"
		android:title="@string/rotation_speed_title"
		android:dialogTitle="@string/rotation_speed_title"
		android:summary="@string/rotation_speed_summary"
		android:persistent="true"
		android:defaultValue="@string/rotation_speed_default_value"
		android:max="@string/rotation_speed_max_value" />
		
	<com.killerappz.android.spinlogo.preferences.SkyboxImagePreference
         android:key="skyboxImages"
         android:title="@string/skybox_images_title"
         android:summary="@string/skybox_images_summary"
         android:dialogTitle="@string/skybox_images_dialog_title"/>
		
	<com.killerappz.android.spinlogo.preferences.LicenseStatusPreference
         android:key="licenseStatus"
         android:title="@string/license_check_title"
         android:summary="@string/license_check_summary"
         android:dialogTitle="@string/license_check_dialog_title"/>
	
</PreferenceScreen>
