<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingLeft="10dp"
	android:paddingRight="10dp"
	android:paddingTop="10dp"
	android:paddingBottom="10dp">
	
	<ScrollView
    	android:id="@+id/scrollview"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    	<TextView
			android:id="@+id/description"
			android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:text="@string/full_version_teaser"
			android:textColor="@color/white_color"
			android:textSize="16sp"/>
	</ScrollView>
			
	<TextView
		android:id="@+id/details"
		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:paddingTop="20dp"
   		android:text="@string/full_version_features"
		android:textColor="@color/white_color"
		android:textSize="16sp"/>
		
	<TextView
		android:id="@+id/details"
		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:paddingTop="20dp"
   		android:text="@string/full_version_donate"
		android:textColor="@color/white_color"
		android:textSize="16sp"/>
        
</LinearLayout>
